# aidr-lite

./: .env.sample  .gitignore  README.md  docker-compose.yml
agent/: pyproject.toml
agent/src/aidr_agent/: config.py  main.py
backend/: pyproject.toml
backend/src/aidr_backend/: main.py
backend/src/aidr_backend/api/: routes_alerts.py  routes_events.py  routes_hosts.py
backend/src/aidr_backend/middleware/: auth.py
backend/src/aidr_backend/schemas/: alerts.py  events.py
backend/src/aidr_backend/storage/: event_buffer.py
dashboard/: DockerFile  index.html
scripts/: simulate_events.py
