[project]
name = "aidr-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
aidr-agent = "aidr_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aidr_agent"]
